# boost_geometry_simplify

./: CMakeLists.txt  README.md  example.cpp  example_ls.cpp  simplify.hpp  test.cpp
